fix: broken style

--- a/static/styles/books.css
+++ b/static/styles/books.css
@@ -1,3 +1,3 @@
 .book-cart {
-    margin: 0;
+    margin: 0 !important;
 }
